[project]
name = "wut-cli"
version = "0.3.0"
requires-python = ">=3.13"
description = "CLI that explains the output of your last command. Forked from shobrook/wut."
authors = [
    { name = "shobrook", email = "shobrookj@gmail.com" },
    { name = "mkasa", email = "masahiro@kasahara.ws" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
keywords = ["openai", "claude", "cli", "commandline", "error", "stack-trace", "explain", "assistant", "terminal"]
dependencies = [
    "anthropic>=0.45.2",
    "ollama>=0.4.7",
    "openai>=1.63.0",
    "psutil>=7.0.0",
    "rich>=13.9.4",
    "tiktoken>=0.9.0",
]


[project.urls]
Homepage = "https://github.com/mkasa/wut"

[tool.setuptools.packages.find]
include = ["wut"]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]

[project.scripts]
wut = "wut.wut:main"
